[package]
name = "utilprint"
version = "0.1.2"
edition = "2021"
authors = ["Jeff <rpgplayers.inc@gmail.com>"]
description = "A utility crate for easily using colors or unicode in your terminal printing"
license = "MIT"
repository = "https://github.com/Coffee-Nerd/utilprint"
homepage = "https://github.com/Coffee-Nerd/utilprint"
documentation = "https://docs.rs/utilprint"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
lazy_static = "1.4.0"

[lib]
name = "utilprint"
path = "src/lib.rs"
